Version history for MooseX::Method::Signatures

0.38 Fri Mar  9 23:43:07 GMT 2012
  * Require B::Hooks::EndOfScope 0.10 and Module::Runtime 0.012, fixing various
    perl 5.8 breakages.

0.37 Mon, 12 Sep 2011 10:35:29 +0100
  * Don't look in the stash for traits or types that contain :: (Jesse Luehrs).

0.36  Tue, 31 Aug 2010 23:36:19 +0200
  * Avoid deprecation warnings from new Moose version by depending on
    MooseX::LazyRequire 0.06 (Jeremy Carman).

0.35  Mon, 19 Jul 2010 05:50:08 +0200
  * Updated to avoid warnings from Moose 1.09 (Dave Rolsky).
  * Switch from Module::Install to Dist::Zilla.

0.34  Tue, 08 Jun 2010 14:00:00 -0300
  * Provides a version of reify that replaces the original version and
    now finally CatalystX::Declare and MooseX::MultiMethods work.

0.33  Thu, 01 Jun 2010 13:47:34 -0300
  * CatalystX::Declare seems to create a method object without a code
    reference at all.

0.32  Thu, 01 Jun 2010 13:47:34 -0300
  * Detect usage of old MXMS::Meta::Method API and retro-compatibilize.

0.31  Thu, 01 Jun 2010 13:47:34 -0300
  * Add support for "does" as a trait declarator
  * Compatibilize MXMS::Meta::Method signature with Class::MOP::Method
    so other traits can apply customizations to the actual body of the
    method.

0.30  Thu, 04 Feb 2010 02:41:36 +0100
  * Make Any instead of Defined the default type constraint.
  * Add tests for coercing optional named parameters (Cory Watson).
    + Make those tests pass by depending on
      MooseX::Types::Structured 0.20.
  * Make sure Text::Balanced doesn't screw up our data.

0.29  Thu, 15 Oct 2009 23:27:08 +0200
  * Fix regression introduced in 0.28.
    Validation for methods without named arguments wasn't strict enough
    anymore. Passing too many arguments hasn't been rejected. Thanks
    Justin Hunter for finding this.

0.28  Fri, 09 Oct 2009 01:28:02 +0200
  * Fix default values for named arguments.

0.27  Tue, 22 Sep 2009 14:30:23 +0200