@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use Test::More 0.89;
-use Test::Exception;
+use Test::Fatal;
 
 use FindBin;
 use lib "$FindBin::Bin/lib";
@@ -9,10 +9,10 @@ use lib "$FindBin::Bin/lib";
 use TestClass;
 use TestClassWithMxTypes;
 
-dies_ok(sub { TestClass->new });
-dies_ok(sub { TestClass->new('moo', 23) });
-dies_ok(sub { TestClass->new('moo', 8) });
-lives_ok(sub { TestClass->new('moo', 52) });
+ok(exception { TestClass->new });
+ok(exception { TestClass->new('moo', 23) });
+ok(exception { TestClass->new('moo', 8) });
+is(exception { TestClass->new('moo', 52) }, undef);
 
 my $o = TestClass->new('foo');
 isa_ok($o, 'TestClass');
@@ -20,63 +20,63 @@ isa_ok($o, 'TestClass');
 is($o->{foo}, 'foo');
 is($o->{bar}, 42);
 
-lives_ok(sub { $o->set_bar(23) });
+is(exception { $o->set_bar(23) }, undef);
 is($o->{bar}, 23);
 
-dies_ok(sub { $o->set_bar('bar') });
+ok(exception { $o->set_bar('bar') });
 
 {
     my $test_hash = { foo => 1 };
-    lives_ok(sub { $o->affe($test_hash) });
+    is(exception { $o->affe($test_hash) }, undef);
     is_deeply($o->{baz}, $test_hash);
 }
 
 {
     my $test_array = [qw/a b c/];
-    lives_ok(sub { $o->affe($test_array) });
+    is(exception { $o->affe($test_array) }, undef);
     is_deeply($o->{baz}, $test_array);
 }
 
-dies_ok(sub { $o->affe('foo') });
+ok(exception { $o->affe('foo') });
 
-dies_ok(sub { $o->named });
-dies_ok(sub { $o->named(optional => 42) });
-throws_ok(sub { $o->named }, qr/\b at \b .* \b line \s+ \d+/x, "dies with proper exception");
+ok(exception { $o->named });
+ok(exception { $o->named(optional => 42) });
+like(exception { $o->named }, qr/\b at \b .* \b line \s+ \d+/x, "dies with proper exception");
 
-lives_ok(sub {
+is(exception {
     is_deeply(
         [$o->named(required => 23)],
         [undef, 23],
     );
-});
+}, undef);
 
-lives_ok(sub {
+is(exception {
     is_deeply(
         [$o->named(optional => 42, required => 23)],
         [42, 23],
     );
-});
+}, undef);
 
-dies_ok(sub { $o->combined(1, 2) });
-dies_ok(sub { $o->combined(1, required => 2) });
+ok(exception { $o->combined(1, 2) });
+ok(exception { $o->combined(1, required => 2) });
 
-lives_ok(sub {
+is(exception {
     is_deeply(
         [$o->combined(1, 2, 3, required => 4, optional => 5)],
         [1, 2, 3, 5, 4],
     );
-});
+}, undef);
 
-lives_ok(sub { $o->with_coercion({}) });
-dies_ok(sub { $o->without_coercion({}) });
-lives_ok(sub { $o->named_with_coercion(foo => bless({}, 'MyType')) });
-lives_ok(sub { $o->named_with_coercion(foo => {}) });
+is(exception { $o->with_coercion({}) }, undef);
+ok(exception { $o->without_coercion({}) });
+is(exception { $o->named_with_coercion(foo => bless({}, 'MyType')) }, undef);
+is(exception { $o->named_with_coercion(foo => {}) }, undef);
 
-lives_ok(sub { $o->optional_with_coercion() });
+is(exception { $o->optional_with_coercion() }, undef);
 {
-    lives_ok(sub {
+    is(exception {
         $o->default_with_coercion()
-    }, 'Complex default with coercion' );
+    }, undef, 'Complex default with coercion' );
 }
 
 # MooseX::Meta::Signature::Combined bug? optional positional can't be omitted
@@ -90,11 +90,11 @@ isa_ok($anon, 'Moose::Meta::Method');
 
 my $mxt =  TestClassWithMxTypes->new();
 
-dies_ok(sub { $mxt->with_coercion() });
-lives_ok(sub { $mxt->with_coercion('Str') });
+ok(exception { $mxt->with_coercion() });
+is(exception { $mxt->with_coercion('Str') }, undef);
 
 isa_ok( $mxt->with_coercion('Str'), q/Moose::Meta::TypeConstraint/ );
-lives_ok(sub { $mxt->optional_with_coercion() });
-lives_ok(sub { $mxt->optional_with_coercion('Str') });
+is(exception { $mxt->optional_with_coercion() }, undef);
+is(exception { $mxt->optional_with_coercion('Str') }, undef);
 
 done_testing;
