@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
-use Test::Exception;
+use Test::Fatal;
 
 {
     package Foo::Bar;
@@ -30,28 +30,28 @@ my $foo = Foo->new;
 
 isa_ok($foo, 'Foo');
 
-lives_and(sub { is $foo->m1('foo'), 'foo' }, 'where positional string type');
-throws_ok(sub { $foo->m1('bar') }, qr/Validation failed/, 'where positional string type');
+is(exception { is $foo->m1('foo'), 'foo' }, undef, 'where positional string type');
+like(exception { $foo->m1('bar') }, qr/Validation failed/, 'where positional string type');
 
-lives_and(sub { is $foo->m2(1), 1 }, 'where positional int type');
-throws_ok(sub { $foo->m2(0) }, qr/Validation failed/, 'where positional int type');
+is(exception { is $foo->m2(1), 1 }, undef, 'where positional int type');
+like(exception { $foo->m2(0) }, qr/Validation failed/, 'where positional int type');
 
-lives_and(sub { is $foo->m3(Foo::Bar->new), 'quux' }, 'where positional class type');
-throws_ok(sub { $foo->m3(Foo::Bar->new({ baz => 'affe' })) }, qr/Validation failed/, 'where positional class type');
+is(exception { is $foo->m3(Foo::Bar->new), 'quux' }, undef, 'where positional class type');
+like(exception { $foo->m3(Foo::Bar->new({ baz => 'affe' })) }, qr/Validation failed/, 'where positional class type');
 
-lives_and(sub { is $foo->m4(arg => 'foo'), 'foo' }, 'where named string type');
-throws_ok(sub { $foo->m4(arg => 'bar') }, qr/Validation failed/, 'where named string type');
+is(exception { is $foo->m4(arg => 'foo'), 'foo' }, undef, 'where named string type');
+like(exception { $foo->m4(arg => 'bar') }, qr/Validation failed/, 'where named string type');
 
-lives_and(sub { is $foo->m5(arg => 1), 1 }, 'where named int type');
-throws_ok(sub { $foo->m5(arg => 0) }, qr/Validation failed/, 'where named int type');
+is(exception { is $foo->m5(arg => 1), 1 }, undef, 'where named int type');
+like(exception { $foo->m5(arg => 0) }, qr/Validation failed/, 'where named int type');
 
-lives_and(sub { is $foo->m6(arg => Foo::Bar->new), 'quux' }, 'where named class type');
-throws_ok(sub { $foo->m6(arg => Foo::Bar->new({ baz => 'affe' })) }, qr/Validation failed/, 'where named class type');
+is(exception { is $foo->m6(arg => Foo::Bar->new), 'quux' }, undef, 'where named class type');
+like(exception { $foo->m6(arg => Foo::Bar->new({ baz => 'affe' })) }, qr/Validation failed/, 'where named class type');
 
-lives_ok(sub { $foo->m7(1) }, 'where positional');
-lives_ok(sub { $foo->m8(arg => 1) }, 'where named');
+is(exception { $foo->m7(1) }, undef, 'where positional');
+is(exception { $foo->m8(arg => 1) }, undef, 'where named');
 
-lives_and(sub { is $foo->m9('bar'), 'bar' }, 'where positional string type with default');
-throws_ok(sub { $foo->m9 }, qr/Validation failed/, 'where positional string type with default');
+is(exception { is $foo->m9('bar'), 'bar' }, undef, 'where positional string type with default');
+like(exception { $foo->m9 }, qr/Validation failed/, 'where positional string type with default');
 
 done_testing;
